Fixed an issue with the negative Z-index making the text area and submit button unclickable.  Header now has positive Z-index instead.

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -4,6 +4,8 @@ header {
     background-color: #cc971d;
     background-image: url("../images/black-linen-2.png");
     margin-bottom: 50px;
+    position: relative;
+    z-index: 2
 }
 
 header div {
