--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -47,6 +47,5 @@ b {
   width: 90%;
   margin: auto;
   position: relative;
-  z-index: -1;
   top: -165px;
 }
